# audio_video_stream

./: .gitignore  LICENSE  README.md
av/: CMakeLists.txt  clean_app.sh
av/inc/: g711_data.h  h265_test_data_360x640.h
av/src/: usr_api.c
rino_usb_cam_example/: Makefile  README.md  RinoDeviceinfo.c  RinoLogUploader.c  RinoRecordPlayBack.c  deviceinfo  ntp_client.c  old_makefile_bak  rino_link_example.c
rino_usb_cam_example/Inc/: RinoDeviceinfo.h  RinoLink_AI_API.h  RinoLink_API.h  RinoLogUploader.h  RinoRecordPlayBack.h  ntp_client.h
rino_usb_cam_example/res/: mediafile.data  send_audio_8k_1ch.g711u  test.aac
usbvideo/: CMakeLists.txt  README.md  main.c  start_app.sh
